--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -66,7 +66,7 @@ layout: layouts/base.njk
     </div>
   </div>
 
-  <div class="grid">
+  <div class="grid grid--change">
     {% for card in connectedCards.slice(2, 4) %}
     {% include 'base-components/connected-card.njk' %}
     {% endfor %}
