Update Modal Window

--- a/src/site/_includes/postcss/project-components/_modal-window.css
+++ b/src/site/_includes/postcss/project-components/_modal-window.css
@@ -5,7 +5,7 @@
 
 .modal-window { 
   --dialog-padding: var(--s3);
-  height: 60vh; 
+  max-height: 90vh;
   box-shadow: var(--base-shadow);
   flex-direction: column;
   overflow: auto;    
