Update Title Sections

--- a/src/site/_includes/postcss/project-components/_title-section.css
+++ b/src/site/_includes/postcss/project-components/_title-section.css
@@ -19,7 +19,8 @@
 
   > .center { 
     width: 100%;
-    max-width: var(--wrapper); 
+    max-width: var(--wrapper);
+    justify-content: center;
   }
 }
 
