Adjust the text on hero-section

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -17,7 +17,8 @@ layout: layouts/base.njk
         <h1>Resource Governance for a Changing World</h1>
       </hgroup>
       <section>
-        <p>The oil, gas and mining sectors have largely failed to deliver on the promise of better quality of life for the one billion people living in poverty in resource-rich countries.</p>
+        <p>The oil, gas and mining sectors have largely failed to deliver on the promise of better</p> 
+        <p>quality of life for the one billion people living in poverty in resource-rich countries.</p>
         <p>The Natural Resource Governance Institute works to change that.</p>
       </section>
       <a class="button button--white-color button--secondary">Learn More</a>
