Fix modal on mobile

--- a/src/site/_includes/postcss/project-components/_modal-window.css
+++ b/src/site/_includes/postcss/project-components/_modal-window.css
@@ -3,6 +3,10 @@
   position: fixed;
 }
 
+.modal-window:not([open]) {
+  display: none;
+}
+
 .modal-window { 
   --dialog-padding: var(--s3) var(--s2);
   max-height: 90vh;
