--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -107,7 +107,7 @@ layout: layouts/base.njk
   </div>
 </section>
 
-<section class="base-section">
+<section class="base-section map-section">
   <div class="center center--wrapper">
     <img class="map" src="/images/nrgi-worldmap-where-we-work.svg" alt="">
     <div class="map-tags center">
