--- a/src/site/_includes/postcss/project-components/_map-tags.css
+++ b/src/site/_includes/postcss/project-components/_map-tags.css
@@ -1,10 +1,16 @@
-.map { margin-bottom: -4rem; }
+.base-section.map-section {
+  padding-bottom: 0;
+}
 
 .map-tags {
   --measure: 960px; /* limits the width of the .center component*/
   --space: var(--s-2);
   display: flex;
-  @media (max-width: 500px) { flex-direction: column; }
+  
+  @media (max-width: 500px) {
+    flex-direction: column;
+    font-size: 12px;
+  }
 
   h4 {
     font-weight: normal;
