--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -4,14 +4,14 @@ layout: layouts/base.njk
 
 <header class="hero-section title-section">
   <div class="hero-section__top-bar">
-    <div class="center">
+    <div class="center center--wrapper">
       <img class="hero-section__image" src="/images/nrgi-logo-white.svg" alt="Natural Resource Governance Institute">
       <a class="hero-section__download-btn button button--primary button--accent-color">Download Full Strategy</a>
     </div>
   </div>
 
   <div class="hero-section__content">
-    <div class="center">
+    <div class="center center--wrapper">
       <hgroup>
         <h3 class="brow">NRGI Strategy 2020-2025</h3>
         <h1>Resource Governance for a Changing World</h1>
