--- a/src/site/_includes/postcss/project-components/_title-section.css
+++ b/src/site/_includes/postcss/project-components/_title-section.css
@@ -1,9 +1,12 @@
 .title-section {
   --bg-color: #111;
   --gradient-width: 10vw;
+  --padding: var(--s3);
+  
   background-color: var(--bg-color);
   color: var(--white-color);
-  padding: var(--s2) var(--s1);
+  padding-top: var(--padding);
+  padding-bottom: var(--padding);
   display: flex;
   flex-direction: column;
   position: relative;
