Organize Project Variables

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -65,6 +65,7 @@
 @import 'project-components/_subscribe-form.css';
 @import 'project-components/_modal-window.css';
 @import 'project-components/_scrollbar.css';
+@import 'project-components/_project-variables.css';
 
 /* Custom Components */
 @import '_custom-component.css';
