--- a/src/site/_includes/postcss/custom-components/_base-card-structure.css
+++ b/src/site/_includes/postcss/custom-components/_base-card-structure.css
@@ -18,7 +18,12 @@
 }
 
 .base-card__content > :last-child { margin-top: auto; }
-.base-card__content > :nth-last-child(2) { margin-bottom: var(--s-1); }
+
+.base-card__content > :nth-last-child(2) {
+  margin-bottom: var(--s-1);
+  color: hsla(var(--black-hsl),.9);
+}
+
 .base-card__img { margin-bottom: 0; }
 
 .base-card__img img {
