--- a/src/site/_includes/postcss/project-components/_title-section.css
+++ b/src/site/_includes/postcss/project-components/_title-section.css
@@ -14,6 +14,7 @@
   min-height: 60vh;
 
   justify-content: center;
+  
   @media (max-width: 850px) { background-size: 100%; }
 
   > .center { 
@@ -24,7 +25,7 @@
 }
 
 .title-section {
-  h1, p { max-width: 80ch; }
+  h1, p { max-width: 80ch; } /* TODO: Me parece que esse linha é inútil. */
 
   h1 {
     font-size: 2.5rem;
