--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -14,11 +14,11 @@ layout: layouts/base.njk
     <div class="center center--wrapper">
       <hgroup>
         <h3 class="brow">NRGI Strategy 2020-2025</h3>
-        <h1>Resource Governance for a Changing World</h1>
+        <h1>Toward a resilient and sustainable future</h1>
       </hgroup>
       <section>
-        <p>The oil, gas and mining sectors have largely failed to deliver on the promise of better quality of life for the one billion people living in poverty in resource-rich countries.</p>
-        <p>The Natural Resource Governance Institute works to change that.</p>
+        <p>For the one billion people living in poverty in resource-rich countries, the management of oil, gas and minerals can either improve or degrade the quality of life. The coronavirus pandemic and its devastating economic impacts present an unprecedented opportunity to address this decades-old challenge.</p>
+        <p>The Natural Resource Governance Institute supports countries to recover and to improve the lives of citizens—now and in the future.</p>
       </section>
       <a class="button button--white-color button--secondary">Learn More</a>
 
@@ -32,14 +32,14 @@ layout: layouts/base.njk
 
 <section class="mission-section text-section">
   <div class="center">
-    <p><strong>NRGI’s mission is ensuring that:</strong></p>
-    <p>Countries rich in oil, gas and minerals achieve sustainable, inclusive development. </p>
-    <p>People receive lasting benefits from the extractive sector and experience reduced harms.</p>
+    <p><strong>We are an independent, global policy analysis and advocacy institute, working with partners to ensure that:</strong></p>
+    <p>Countries rich in oil, gas and minerals achieve sustainable, inclusive development.</p>
+    <p>People receive lasting benefits—and experience reduced harms—from the extractive sector.</p>
   </div>
 </section>
 
 <section class="title-section--who-we-are title-section">
-  <h1 class="text-align:center">Who we are</h1>
+  <h1>Who we are</h1>
 </section>
 
 <section class="mission-section text-section">
@@ -48,16 +48,16 @@ layout: layouts/base.njk
     <p>We believe in rigorous, evidence-driven, dialogue-based decision-making. Our work with in-country reformers and engagement with international influencers inform and reinforce one another.</p>
     <div class="nrgi-impact-tag">
         <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
-        <p>Click on these icons to learn about related achievements in NRGI’s last strategy period</p>
+        <p>NRGI Impact Resource Governance Index drives reform</p>
       </div>
   </div>
 </section>
 
-
 <section class="title-section--area-focus title-section">
   <div class="center stack">
-    <h1>Areas of focus</h1>
-    <p>NRGI works expressly on the extractives sector, guided by the intellectual framework of the <strong class="color:accent">Natural Resource Charter</strong>. From now until 2025, NRGI will focus on two areas of the extractive industry decision chain: <strong>getting a good deal</strong> and <strong>revenue management</strong>.</p>
+    <h1>Our expertise</h1>
+    <p>NRGI focuses on reform of the most critical governance elements of the extractives sector. We work to ensure that citizens can get a good deal for their countries’ 
+resources and that authorities manage revenue effectivelyand accountably. We willhelp countries to navigate the energy transition, and to eliminate capture and corruption.</p>
   </div>
 </section>
 
@@ -99,11 +99,7 @@ layout: layouts/base.njk
 <section class="title-section--where-we-work title-section">
   <div class="center stack">
     <h1>Where we work</h1>
-    <p>NRGI targets countries where government actors are open to reform and where there are accountability actors to inform and/or support their efforts.</p>
-    <div class="nrgi-impact-tag">
-      <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
-      <p>Click on these icons to learn about related achievements in NRGI’s last strategy period</p>
-    </div>
+    <p>NRGI works in countries where government actors are open to reform and where accountability actors can inform and support change. Our in-country presence in multiple resource-rich countries is unique among actors in natural resource governance.</p>
   </div>
 </section>
 
@@ -135,18 +131,10 @@ layout: layouts/base.njk
   </div>
 </section>
 
-<section class="text-section">
-  <div class="center center--narrow">
-    <p><strong>We have more influence in the early stages of the development of natural resources than when trying to address weaknesses or gaps in countries that have decades-old extractive sectors.</strong></p>
-    <p>However, NRGI balances its engagement across countries where there is openness to reform and the possibility of significant short-term change, with more challenging contexts where the likelihood of immediate success is lower but NRGI’s contribution is potentially more game-changing and the impact for citizens more significant over the long term.</p>
-  </div>
-</section>
-
-
 <section class="title-section title-section--bring-change">
   <div class="center stack">
     <h1>How we bring about change</h1>
-    <p>In concert with other actors in the resource governance space, NRGI’s works with influential actors at the country and global levels to inform policy change and see it through to implementation.</p>
+    <p>NRGI works to influence governments who lead the management of resources on behalf of citizens. At the international and national levels we focus on incentives that accelerate reform and mitigate disincentives that obstruct change.</p>
   </div>
 </section>
 
