--- a/src/site/_includes/_modal-window.njk
+++ b/src/site/_includes/_modal-window.njk
@@ -1,4 +1,4 @@
-<div id="card-{{ loop.index }}" class="dialog-window">
+<div id="{{ card.modal_id }}" class="dialog-window">
   <div class="overlay" tabindex="-1" data-a11y-dialog-hide></div>
   <dialog class="modal-window" aria-labelledby="{{card.heading}}">
     <button class="dialog__close" type="button" data-a11y-dialog-hide aria-label="Close this dialog window">
