--- a/src/site/_includes/base-components/card.njk
+++ b/src/site/_includes/base-components/card.njk
@@ -12,7 +12,7 @@
       </div>
       {% endif %}
       
-      <button class="button {{ card.button.class | d('') }}" aria-hidden="true" id="{{ card.heading | slug }}" type="button" data-a11y-dialog-show="card-{{ loop.index }}">{{ card.button.label | d('Read More', true) }}</button>
+      <button class="button {{ card.button.class | d('') }}" aria-hidden="true" id="{{ card.heading | slug }}" type="button" data-a11y-dialog-show="{{ card.modal_id }}">{{ card.button.label | d('Read More', true) }}</button>
     </footer>
   </div>
 </li>
