--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -147,7 +147,7 @@ resources and that authorities manage revenue effectivelyand accountably. We wil
 </section>
 
 <section class="title-section--why-nrgi title-section">
-  <h1 class="text-align:center">Why NRGI</h1>
+  <h1>Why NRGI</h1>
 </section>
 
 <section class="text-section shadow-section quote-section">
