Center Last Card

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -47,9 +47,9 @@ layout: layouts/base.njk
     <p>For over a decade NRGI has worked to lift countries out of poverty by acting as a knowledge generator, convener of change-makers, trusted broker and capacity builder. We seize opportunities during moments of political openness to advance and sustain policy reform. </p>
     <p>We believe in rigorous, evidence-driven, dialogue-based decision-making. Our work with in-country reformers and engagement with international influencers inform and reinforce one another.</p>
     <div class="nrgi-impact-tag">
-        <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
-        <p>NRGI Impact Resource Governance Index drives reform</p>
-      </div>
+      <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+      <p>NRGI Impact Resource Governance Index drives reform</p>
+    </div>
   </div>
 </section>
 
@@ -57,7 +57,7 @@ layout: layouts/base.njk
   <div class="center stack">
     <h1>Our expertise</h1>
     <p>NRGI focuses on reform of the most critical governance elements of the extractives sector. We work to ensure that citizens can get a good deal for their countries’ 
-resources and that authorities manage revenue effectivelyand accountably. We willhelp countries to navigate the energy transition, and to eliminate capture and corruption.</p>
+    resources and that authorities manage revenue effectivelyand accountably. We willhelp countries to navigate the energy transition, and to eliminate capture and corruption.</p>
   </div>
 </section>
 
@@ -138,8 +138,8 @@ resources and that authorities manage revenue effectivelyand accountably. We wil
   </div>
 </section>
 
-<section class="base-section change-cards">
-  <div class="center center--wrapper grid card-grid">
+<section class="base-section">
+  <div class="center center--wrapper change-cards">
     {% for card in cards %}
     {% include 'base-components/card.njk' %}
     {% endfor %}
