--- a/src/site/_includes/postcss/project-components/_card.css
+++ b/src/site/_includes/postcss/project-components/_card.css
@@ -3,6 +3,18 @@
 	--card-border: 0;
 	background-color: var(--active-color);
 	z-index: 1;
+	flex: 0 1 48%;
+	/*margin: 0 auto var(--s2);*/
+	margin-bottom: var(--s2);
+	justify-content: space-between;
+
+	@media(max-width: 768px) {
+		flex: unset;
+	}
+}
+
+.card:last-child {
+	margin: 0 auto;
 }
 
 .card .button {
@@ -18,6 +30,9 @@
 
 .change-cards {    
 	margin-top: calc(var(--s4) * -1);
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
 }
 
 
